RESOLVED FIXED232892
[LFC][IFC] Horizontal constraint change should not purge the inline item cache.
https://bugs.webkit.org/show_bug.cgi?id=232892
Summary [LFC][IFC] Horizontal constraint change should not purge the inline item cache.
alan
Reported 2021-11-09 10:12:00 PST
It only has layout implications (and not content).
Attachments
Patch (1.71 KB, patch)
2021-11-09 10:15 PST, alan
no flags
alan
Comment 1 2021-11-09 10:15:06 PST
EWS
Comment 2 2021-11-09 12:44:24 PST
Committed r285523 (244040@main): <https://commits.webkit.org/244040@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443702 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-09 12:45:53 PST
Note You need to log in before you can comment on or make changes to this bug.