[LFC][IFC] Horizontal constraint change should not purge the inline item cache. https://bugs.webkit.org/show_bug.cgi?id=232892

Reviewed by Antti Koivisto.

Available horizontal space change does not affect the inline content itself (it only affects the geometry of said content).

* layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
(WebCore::Layout::InlineInvalidation::horizontalConstraintChanged):



Canonical link: https://commits.webkit.org/244040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285523 268f45cc-cd09-0410-ab3c-d52691b4dbfc